Ready for deployment

--- a/uacs-backend/package.json
+++ b/uacs-backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
     "send-test-email": "node scripts/sendTestEmail.js"
   },
   "keywords": [],
