Update .env FRONTEND_URL to use Vercel URL

--- a/uacs-backend/.env
+++ b/uacs-backend/.env
@@ -5,4 +5,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=uaclinicsystem@gmail.com
 SMTP_PASS=mbupfejxfzyodato
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://uacs-fe.vercel.app
