--- a/uacs-backend/vercel.json
+++ b/uacs-backend/vercel.json
@@ -8,15 +8,8 @@
   ],
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/app.js"
-    },
-    {
       "source": "/(.*)",
-      "destination": "/app.js"
+      "destination": "app.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  ]
 }
