--- a/uacs-backend/package.json
+++ b/uacs-backend/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
+    "vercel-build": "echo 'Build step completed'",
     "send-test-email": "node scripts/sendTestEmail.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
