--- a/uacs-backend/vercel.json
+++ b/uacs-backend/vercel.json
@@ -1,10 +1,5 @@
 {
-  "functions": {
-    "api/*.js": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
-  },
+  "version": 2,
   "builds": [
     {
       "src": "app.js",
