--- a/uacs-backend/package.json
+++ b/uacs-backend/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "build": "node app.js",
+    "build": "echo 'Build step completed'",
     "dev": "node app.js",
     "send-test-email": "node scripts/sendTestEmail.js"
   },
